--- a/public/america.html
+++ b/public/america.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/america.css">
 </head>
 <body>
+  <header>
+		<img class="logo" src="./img/logo.png" alt="Foto da agência de viagens">
+	</header>
   <div id="america-list" class="slider">
     <div class="slider__content"></div>
     <div class="slider__nav">
